--- a/frontend/index.html
+++ b/frontend/index.html
@@ -520,16 +520,24 @@ function speak(text, slow = false) {
     lipsyncInterval = setInterval(() => {
       t += slow ? 0.05 : 0.1;
 
-      let jaw = Math.abs(Math.sin(t)) * 0.35;
-      jaw += (Math.random() * 0.08 - 0.04);
-      if (Math.random() < 0.03) jaw *= 0.25;
-      jaw = Math.min(Math.max(jaw, 0), 0.45);
+     let jaw = Math.abs(Math.sin(t)) * 0.38;
 
-      // Minimalfilter – noch lebendig
-      jaw = lerp(getBlendshape(jawOpenIndex), jaw, 0.05);
+// etwas mutigere Zufallsvariation
+jaw += (Math.random() * 0.10 - 0.05);
 
-      const wide = jaw * 0.42;
-      const puck = jaw * 0.28;
+// etwas häufiger kleine Konsonantenöffnungen
+if (Math.random() < 0.04) jaw *= 0.25;
+
+// clamp
+jaw = Math.min(Math.max(jaw, 0), 0.45);
+
+// ⭐ ultra-weiche Glättung, aber NICHT einschläfernd
+jaw = lerp(getBlendshape(jawOpenIndex), jaw, 0.03);
+
+// starke und sichtbare Morphformen
+const wide = jaw * 0.48;
+const puck = jaw * 0.30;
+
 
       setBlendshape(jawOpenIndex, jaw);
       setBlendshape(mouthWideIndex, wide);
