--- a/frontend/index.html
+++ b/frontend/index.html
@@ -296,23 +296,27 @@ function animate() {
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.03);
   }
 
-  // ⭐ Sichtbare, natürliche Blickbewegungen – Version 2 (mehr Dynamik!)
-  const driftX = Math.sin(now * 0.0012) * 0.05;   // klar sichtbares Nicken
-  const driftY = Math.sin(now * 0.0010) * 0.04;   // klar seitlich „denken“
+  // ⭐ Sichtbare, natürliche Blickbewegungen – Version 2 (ohne Aufschaukeln)
+  const driftX = Math.sin(now * 0.0012) * 0.05;   // klares Nicken
+  const driftY = Math.sin(now * 0.0010) * 0.04;   // seitliches „Denken“
 
-  // X-Achse → Richtung baseRotX + Variation
+  // X-Achse → um baseRotX herum
   model.rotation.x = THREE.MathUtils.lerp(
     model.rotation.x,
     baseRotX + driftX,
     0.03
   );
 
-  // Y-Achse → nur wenn kein Hmmm aktiv & nicht am Anheben
+  // Y-Achse → um fixen Basiswinkel, NICHT auf sich selbst aufsatteln
   if (!hmNeigen && !rising) {
+    // Basis: im Idle leicht rechts, sonst frontal
+    const baseYawForDrift = (STATE === "idle") ? rightY : frontalY;
+    const targetYaw = baseYawForDrift + driftY;
+
     model.rotation.y = THREE.MathUtils.lerp(
       model.rotation.y,
-      model.rotation.y + driftY,
-      0.018
+      targetYaw,
+      0.04
     );
   }
 
